--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -25,6 +25,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome": "^1.1.8",
-        "startbootstrap-sb-admin-2": "^4.0.7"
+        "startbootstrap-sb-admin-2": "^4.0.7",
+        "sweetalert2": "^8.17.6",
+        "vform": "^1.0.1",
+        "vue-router": "^3.1.3"
     }
 }
